--- a/core/res/res/values/feather_symbols.xml
+++ b/core/res/res/values/feather_symbols.xml
@@ -33,4 +33,6 @@
     <!-- Camera -->
     <java-symbol type="array" name="config_cameraAuxPackageAllowList" />
     <java-symbol type="array" name="config_cameraAuxPackageExcludeList" />
+
+    <java-symbol type="array" name="config_cameraHFRPrivAppList" />
 </resources>
