--- a/core/res/res/values/feather_config.xml
+++ b/core/res/res/values/feather_config.xml
@@ -101,4 +101,9 @@
     <string-array name="config_displayModeMappings" translatable="false" />
     <!-- Should we filter any display modes which are unmapped? -->
     <bool name="config_filterDisplayModes">false</bool>
+
+    <!-- Path to fast charging status file to detect whether an oem fast charger is active -->
+    <string name="config_oemFastChargerStatusPath" translatable="false"></string>
+    <!-- Expected value from fast charging status file  -->
+    <string name="config_oemFastChargerStatusValue" translatable="false"></string>
 </resources>
