--- a/core/res/res/values/feather_symbols.xml
+++ b/core/res/res/values/feather_symbols.xml
@@ -89,4 +89,9 @@
     <java-symbol type="bool" name="config_defaultAntiFlicker" />
     <java-symbol type="bool" name="config_filterDisplayModes" />
     <java-symbol type="array" name="config_displayModeMappings" />
+
+    <!-- Path to fast charging status file to detect whether an oem fast charger is active -->
+    <java-symbol type="string" name="config_oemFastChargerStatusPath" />
+    <!-- Expected value from fast charging status file -->
+    <java-symbol type="string" name="config_oemFastChargerStatusValue" />
 </resources>
