SystemUI: Update string for add tiles with one click
In 9.0 it shows a string in the qs panel telling you how to add/remove tiles and after 'SystemUI: Allow user to add/remove QS with one click' it still says "Hold and drag to add tiles". Update string to the correct way.

Change-Id: I2912e9254f9ed14436119addc913fe9907dc7f4e

--- a/packages/SystemUI/res/values/feather_strings.xml
+++ b/packages/SystemUI/res/values/feather_strings.xml
@@ -10,4 +10,9 @@
     <string name="quick_settings_caffeine_label">Caffeine</string>
     <string name="accessibility_quick_settings_caffeine_off">Caffeine off.</string>
     <string name="accessibility_quick_settings_caffeine_on">Caffeine on.</string>
+
+    <!-- Label for area where tiles can be added to the qs panel -->
+    <string name="drag_or_tap_to_add_tiles">Hold &amp; drag or tap to add tiles</string>
+    <!-- Label for the area where tiles can be dragged in to remove -->
+    <string name="drag_or_tap_to_remove_tiles">Hold &amp; drag or tap to remove tiles</string>
 </resources>
