--- a/packages/SystemUI/res/values/feather_strings.xml
+++ b/packages/SystemUI/res/values/feather_strings.xml
@@ -15,4 +15,9 @@
     <string name="drag_or_tap_to_add_tiles">Hold &amp; drag or tap to add tiles</string>
     <!-- Label for the area where tiles can be dragged in to remove -->
     <string name="drag_or_tap_to_remove_tiles">Hold &amp; drag or tap to remove tiles</string>
+
+    <!-- Label for notification action to delete a screen recording file [CHAR LIMIT=35] -->
+    <string name="screenrecord_delete_label">Delete</string>
+    <!-- A toast message shown after successfully deleting a screen recording [CHAR LIMIT=NONE] -->
+    <string name="screenrecord_delete_description">Screen recording deleted</string>
 </resources>
