--- a/core/res/res/values/feather_symbols.xml
+++ b/core/res/res/values/feather_symbols.xml
@@ -29,4 +29,8 @@
     <!-- Whether device implements proximity sensor based checks to prevent
          accidental unlocks when the screen is off. -->
     <java-symbol type="bool" name="config_proximityCheckOnFpsUnlock" />
+
+    <!-- Camera -->
+    <java-symbol type="array" name="config_cameraAuxPackageAllowList" />
+    <java-symbol type="array" name="config_cameraAuxPackageExcludeList" />
 </resources>
