--- a/core/res/res/values/feather_config.xml
+++ b/core/res/res/values/feather_config.xml
@@ -31,4 +31,8 @@
          the sensor embedded in the power key and listening all the time
          causes a poor experience. -->
     <bool name="config_fingerprintWakeAndUnlock">true</bool>
+
+    <!-- Whether device implements proximity sensor based checks to prevent
+         accidental unlocks when the screen is off. -->
+    <bool name="config_proximityCheckOnFpsUnlock">false</bool>
 </resources>
