--- a/core/res/res/values/feather_symbols.xml
+++ b/core/res/res/values/feather_symbols.xml
@@ -25,4 +25,8 @@
          the sensor embedded in the power key and listening all the time
          causes a poor experience. -->
     <java-symbol type="bool" name="config_fingerprintWakeAndUnlock" />
+
+    <!-- Whether device implements proximity sensor based checks to prevent
+         accidental unlocks when the screen is off. -->
+    <java-symbol type="bool" name="config_proximityCheckOnFpsUnlock" />
 </resources>
