--- a/packages/SystemUI/res/values/feather_config.xml
+++ b/packages/SystemUI/res/values/feather_config.xml
@@ -24,4 +24,7 @@
     <!-- StatusBar burn-in protection -->
     <bool name="config_statusBarBurnInProtection">true</bool>
     <integer name="config_shift_interval">60</integer>
+
+    <!-- Whether to play turbulence noise after clicking the play button -->
+    <bool name="config_turbulenceNoise">true</bool>
 </resources>
